src/test/deca/codegen/invalid/result/test_null_output_no_check.res
  ** IMA ** ERREUR ** Ligne 60 : 
    Adressage indirect : la base ne contient pas une adresse
